[package]
name = "derp"
edition = "2018"
version = "0.0.14"
authors = ["heartsucker <heartsucker@autistici.org>"]
description = "DER Parser (and Writer)"
homepage = "https://github.com/heartsucker/derp"
repository = "https://github.com/heartsucker/derp"
documentation = "https://docs.rs/derp"
readme = "README.md"
license = "ISC"
keywords = [ "der", "parser" ]

[dependencies]
untrusted = "0.9"
